load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/uber/prototool
# gazelle:exclude etc
# gazelle:exclude example
# gazelle:exclude internal/breaking/testdata
# gazelle:exclude internal/cmd/testdata
# gazelle:exclude internal/file/testdata
# gazelle:exclude internal/reflect/proto
# gazelle:exclude internal/reflect/testdata
gazelle(name = "gazelle")
