load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "check.go",
        "checker.go",
        "enum.go",
        "error.go",
        "field.go",
        "file.go",
        "message.go",
        "method.go",
        "oneof.go",
        "service.go",
    ],
    importpath = "github.com/uber/prototool/internal/compatible",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/location:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "check_test.go",
        "checker_test.go",
        "enum_test.go",
        "error_test.go",
        "field_test.go",
        "file_test.go",
        "message_test.go",
        "method_test.go",
        "oneof_test.go",
        "service_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/location:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
