load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "create.go",
        "handler.go",
    ],
    importpath = "github.com/uber/prototool/internal/create",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/protostrs:go_default_library",
        "//internal/settings:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
