load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["extract.go"],
    importpath = "github.com/uber/prototool/internal/extract",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/protostrs:go_default_library",
        "//internal/reflect/gen/uber/proto/reflect/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["extract_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//internal/reflect:go_default_library",
        "//internal/testing:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
