load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "base_linter.go",
        "base_visitor.go",
        "check_comments_no_c_style.go",
        "check_comments_no_inline.go",
        "check_enum_field_names_upper_snake_case.go",
        "check_enum_field_names_uppercase.go",
        "check_enum_field_prefixes.go",
        "check_enum_field_prefixes_except_message.go",
        "check_enum_fields_have_comments.go",
        "check_enum_fields_have_sentence_comments.go",
        "check_enum_names_camel_case.go",
        "check_enum_names_capitalized.go",
        "check_enum_zero_values_invalid.go",
        "check_enum_zero_values_invalid_except_message.go",
        "check_enums_have_comments.go",
        "check_enums_have_sentence_comments.go",
        "check_enums_no_allow_alias.go",
        "check_fields_not_reserved.go",
        "check_file_header.go",
        "check_file_names_lower_snake_case.go",
        "check_file_options_equal.go",
        "check_file_options_required.go",
        "check_file_options_same_in_dir.go",
        "check_file_options_unset.go",
        "check_go_package_not_long_form.go",
        "check_gogo_not_imported.go",
        "check_imports_not_public.go",
        "check_imports_not_weak.go",
        "check_message_field_names_filename.go",
        "check_message_field_names_filepath.go",
        "check_message_field_names_lower_snake_case.go",
        "check_message_field_names_lowercase.go",
        "check_message_field_names_no_descriptor.go",
        "check_message_fields_duration.go",
        "check_message_fields_have_comments.go",
        "check_message_fields_have_sentence_comments.go",
        "check_message_fields_no_json_name.go",
        "check_message_fields_not_floats.go",
        "check_message_fields_time.go",
        "check_message_names_camel_case.go",
        "check_message_names_capitalized.go",
        "check_messages_have_comments.go",
        "check_messages_have_comments_except_request_response_types.go",
        "check_messages_have_sentence_comments_except_request_response_types.go",
        "check_messages_not_empty_except_request_response_types.go",
        "check_names.go",
        "check_oneof_names_lower_snake_case.go",
        "check_package_is_declared.go",
        "check_package_lower_case.go",
        "check_package_lower_snake_case.go",
        "check_package_major_beta_versioned.go",
        "check_package_no_keywords.go",
        "check_packages_same_in_dir.go",
        "check_request_response_names_match_rpc.go",
        "check_request_response_types_after_service.go",
        "check_request_response_types_in_same_file.go",
        "check_request_response_types_only_in_file.go",
        "check_request_response_types_unique.go",
        "check_rpc_names_camel_case.go",
        "check_rpc_names_capitalized.go",
        "check_rpc_options_no_google_api_http.go",
        "check_rpcs_have_comments.go",
        "check_rpcs_have_sentence_comments.go",
        "check_rpcs_no_streaming.go",
        "check_service_names_api_suffix.go",
        "check_service_names_camel_case.go",
        "check_service_names_capitalized.go",
        "check_service_names_match_file_name.go",
        "check_service_names_singular.go",
        "check_services_have_comments.go",
        "check_services_have_sentence_comments.go",
        "check_syntax_proto3.go",
        "check_wkt_directly_imported.go",
        "check_wkt_duration_suffix.go",
        "check_wkt_timestamp_suffix.go",
        "lint.go",
        "runner.go",
    ],
    importpath = "github.com/uber/prototool/internal/lint",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/file:go_default_library",
        "//internal/protostrs:go_default_library",
        "//internal/settings:go_default_library",
        "//internal/strs:go_default_library",
        "//internal/text:go_default_library",
        "//internal/wkt:go_default_library",
        "@com_github_emicklei_proto//:go_default_library",
        "@com_github_gobuffalo_flect//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
