load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "comments.go",
        "finder.go",
        "id.go",
        "location.go",
        "path.go",
        "span.go",
    ],
    importpath = "github.com/uber/prototool/internal/location",
    visibility = ["//:__subpackages__"],
    deps = ["@io_bazel_rules_go//proto/wkt:descriptor_go_proto"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "finder_test.go",
        "location_test.go",
        "path_test.go",
        "span_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
