load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["protostrs.go"],
    importpath = "github.com/uber/prototool/internal/protostrs",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/strs:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["protostrs_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
