load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config_provider.go",
        "settings.go",
    ],
    importpath = "github.com/uber/prototool/internal/settings",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/strs:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_provider_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
