load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testing.go"],
    importpath = "github.com/dapperlabs/prototool/internal/testing",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/file:go_default_library",
        "//internal/protoc:go_default_library",
        "//internal/reflect/gen/uber/proto/reflect/v1:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_multierr//:go_default_library",
    ],
)
