load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/uber/prototool/example/cmd/excited",
    visibility = ["//visibility:private"],
    deps = [
        "//example/gen/go/uber/foo/v1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "excited",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
