load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/dapperlabs/prototool/internal/cmd/gen-prototool-zsh-completion",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd:go_default_library"],
)

go_binary(
    name = "gen-prototool-zsh-completion",
    embed = [":go_default_library"],
    visibility = ["//:__subpackages__"],
)
